--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,6 +58,7 @@
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
     "map": "c",
-    "format": "c"
+    "format": "c",
+    "cstdlib": "c"
   }
 }
